syntax = "proto3";

package intev;

import "pkg/decimalpb/decimal.proto";

option go_package = ".;intev";

message InternalEvent {
  //dispatcher:generate
  oneof event {
    SubscribeInstruments subscribe_instruments = 1;
    NewOrderRequested new_order_requested = 2;
  }
}

message SubscribeInstruments {
  repeated Instrument instruments = 1;
}

message Instrument {
  Exchange Exchange = 1;
  string LocalSymbol = 2;
  string ExchangeSymbol = 3;
}

enum Exchange {
  ExchangeUnknown = 0;
  ExchangeOKX = 1;
  ExchangeGateIO = 2;
  ExchangeBybit = 3;
}

message NewOrderRequested {
  string client_order_id = 1;
  LocalInstrument local_instrument = 2;
  decimal.Decimal price = 3;
  decimal.Decimal qty = 4;
  OrderSide order_side = 5;
  OrderType type = 6;
  TimeInForce time_in_force = 7;
}

enum OrderType {
  ORDER_TYPE_UNSPECIFIED = 0;
  ORDER_TYPE_MARKET = 1;
  ORDER_TYPE_LIMIT = 2;
}

enum OrderSide {
  ORDER_SIDE_UNSPECIFIED = 0;
  ORDER_SIDE_BUY = 1;
  ORDER_SIDE_SELL = 2;
}

enum TimeInForce {
  TIME_IN_FORCE_UNSPECIFIED = 0;
  TIME_IN_FORCE_GTC = 1;
  TIME_IN_FORCE_IOC = 2;
  TIME_IN_FORCE_FOK = 3;
}

message LocalInstrument {
  Exchange exchange = 1;
  string Symbol = 2;
}